merged base64, removed support for ascii and iso as charsets in it